gr8/gr8_parser.output
   0  $accept : file $end

   1  file : listd
   2       |

   3  listd : decl
   4        | listd decl

   5  decl : var ';'
   6       | funct

   7  var : type tIDENTIFIER
   8      | type tIDENTIFIER '(' tINITIALLY expr ')'
   9      | qualf type tIDENTIFIER
  10      | qualf type tIDENTIFIER '(' tINITIALLY expr ')'

  11  vars : var
  12       | vars ',' var

  13  funct : fdecl ';'
  14        | fdef

  15  fdecl : qualf type tFUNCTION tIDENTIFIER
  16        | qualf tPROCEDURE tIDENTIFIER
  17        | qualf type tFUNCTION tIDENTIFIER tUSES vars
  18        | qualf tPROCEDURE tIDENTIFIER tUSES vars
  19        | type tFUNCTION tIDENTIFIER
  20        | tPROCEDURE tIDENTIFIER
  21        | type tFUNCTION tIDENTIFIER tUSES vars
  22        | tPROCEDURE tIDENTIFIER tUSES vars

  23  fdef : tDEFINE qualf type tFUNCTION tIDENTIFIER tAS block
  24       | tDEFINE qualf tPROCEDURE tIDENTIFIER tAS block
  25       | tDEFINE qualf type tFUNCTION tIDENTIFIER tON vars tAS block
  26       | tDEFINE qualf tPROCEDURE tIDENTIFIER tON vars tAS block
  27       | tDEFINE type tFUNCTION tIDENTIFIER tAS block
  28       | tDEFINE tPROCEDURE tIDENTIFIER tAS block
  29       | tDEFINE type tFUNCTION tIDENTIFIER tON vars tAS block
  30       | tDEFINE tPROCEDURE tIDENTIFIER tON vars tAS block

  31  finv : tUSE exprs tFOR tIDENTIFIER
  32       | tDO tIDENTIFIER

  33  lists : tSMALL
  34        | lists tSMALL

  35  listh : tHUGE
  36        | listh tHUGE

  37  listf : tFAKE
  38        | listf tFAKE

  39  type : tSMALL
  40       | lists tFAKE
  41       | tHUGE
  42       | listh tFAKE
  43       | tNEWS
  44       | listf tNEWS

  45  decls : decl
  46        | decls decl

  47  listi : stmt
  48        | listi stmt

  49  block : '{' decls '}'
  50        | '{' listi '}'
  51        | '{' decls listi '}'
  52        | '{' '}'

  53  stmt : expr ';'
  54       | asgn ';'
  55       | tTWEET expr ';'
  56       | tPOST expr ';'
  57       | tAGAIN ';'
  58       | tAGAIN tINTEGER ';'
  59       | tSTOP ';'
  60       | tSTOP tINTEGER ';'
  61       | tRETURN ';'
  62       | tRETURN expr ';'
  63       | tIF condt
  64       | iter
  65       | block

  66  asgn : tASSIGN expr tTO lval

  67  condt : expr tTHEN block
  68        | expr tTHEN block tELSE block
  69        | expr tTHEN block tELSIF condt

  70  iter : tSWEEPING lval tFROM expr tTO expr tDO block
  71       | tSWEEPING lval tFROM expr tTO expr tBY expr tDO block

  72  exprs : expr
  73        | exprs ',' expr

  74  qualf : tPUBLIC
  75        | tUSE

  76  expr : tINTEGER
  77       | tFLOAT
  78       | str
  79       | '(' expr ')'
  80       | tPLUS expr
  81       | tMINUS expr
  82       | lval tINTERROG
  83       | expr tOBJECTS
  84       | expr tPLUS expr
  85       | expr tMINUS expr
  86       | expr tTIMES expr
  87       | expr tOVER expr
  88       | expr tMODULUS expr
  89       | expr tBELOW expr
  90       | expr tABOVE expr
  91       | expr tEQUALS expr
  92       | tNOT expr
  93       | expr tAND expr
  94       | expr tOR expr
  95       | finv
  96       | lval
  97       | tNULL
  98       | tINPUT

  99  str : tSTRING
 100      | str tSTRING

 101  lval : tIDENTIFIER
 102       | tCELL expr tAT lval
 103       | tCELL expr tAT '(' expr ')'

state 0
	$accept : . file $end  (0)
	file : .  (2)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tUSE  shift 5
	tPUBLIC  shift 6
	tDEFINE  shift 7
	tPROCEDURE  shift 8
	$end  reduce 2

	file  goto 9
	qualf  goto 10
	decl  goto 11
	var  goto 12
	funct  goto 13
	fdecl  goto 14
	fdef  goto 15
	listd  goto 16
	lists  goto 17
	listf  goto 18
	listh  goto 19
	type  goto 20


state 1
	lists : tSMALL .  (33)
	type : tSMALL .  (39)

	tIDENTIFIER  reduce 39
	tSMALL  reduce 33
	tFAKE  reduce 33
	tFUNCTION  reduce 39


state 2
	listh : tHUGE .  (35)
	type : tHUGE .  (41)

	tIDENTIFIER  reduce 41
	tHUGE  reduce 35
	tFAKE  reduce 35
	tFUNCTION  reduce 41


state 3
	type : tNEWS .  (43)

	.  reduce 43


state 4
	listf : tFAKE .  (37)

	.  reduce 37


state 5
	qualf : tUSE .  (75)

	.  reduce 75


state 6
	qualf : tPUBLIC .  (74)

	.  reduce 74


state 7
	fdef : tDEFINE . qualf type tFUNCTION tIDENTIFIER tAS block  (23)
	fdef : tDEFINE . qualf tPROCEDURE tIDENTIFIER tAS block  (24)
	fdef : tDEFINE . qualf type tFUNCTION tIDENTIFIER tON vars tAS block  (25)
	fdef : tDEFINE . qualf tPROCEDURE tIDENTIFIER tON vars tAS block  (26)
	fdef : tDEFINE . type tFUNCTION tIDENTIFIER tAS block  (27)
	fdef : tDEFINE . tPROCEDURE tIDENTIFIER tAS block  (28)
	fdef : tDEFINE . type tFUNCTION tIDENTIFIER tON vars tAS block  (29)
	fdef : tDEFINE . tPROCEDURE tIDENTIFIER tON vars tAS block  (30)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tUSE  shift 5
	tPUBLIC  shift 6
	tPROCEDURE  shift 21
	.  error

	qualf  goto 22
	lists  goto 17
	listf  goto 18
	listh  goto 19
	type  goto 23


state 8
	fdecl : tPROCEDURE . tIDENTIFIER  (20)
	fdecl : tPROCEDURE . tIDENTIFIER tUSES vars  (22)

	tIDENTIFIER  shift 24
	.  error


state 9
	$accept : file . $end  (0)

	$end  accept


state 10
	var : qualf . type tIDENTIFIER  (9)
	var : qualf . type tIDENTIFIER '(' tINITIALLY expr ')'  (10)
	fdecl : qualf . type tFUNCTION tIDENTIFIER  (15)
	fdecl : qualf . tPROCEDURE tIDENTIFIER  (16)
	fdecl : qualf . type tFUNCTION tIDENTIFIER tUSES vars  (17)
	fdecl : qualf . tPROCEDURE tIDENTIFIER tUSES vars  (18)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tPROCEDURE  shift 25
	.  error

	lists  goto 17
	listf  goto 18
	listh  goto 19
	type  goto 26


state 11
	listd : decl .  (3)

	.  reduce 3


state 12
	decl : var . ';'  (5)

	';'  shift 27
	.  error


state 13
	decl : funct .  (6)

	.  reduce 6


state 14
	funct : fdecl . ';'  (13)

	';'  shift 28
	.  error


state 15
	funct : fdef .  (14)

	.  reduce 14


state 16
	file : listd .  (1)
	listd : listd . decl  (4)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tUSE  shift 5
	tPUBLIC  shift 6
	tDEFINE  shift 7
	tPROCEDURE  shift 8
	$end  reduce 1

	qualf  goto 10
	decl  goto 29
	var  goto 12
	funct  goto 13
	fdecl  goto 14
	fdef  goto 15
	lists  goto 17
	listf  goto 18
	listh  goto 19
	type  goto 20


state 17
	lists : lists . tSMALL  (34)
	type : lists . tFAKE  (40)

	tSMALL  shift 30
	tFAKE  shift 31
	.  error


state 18
	listf : listf . tFAKE  (38)
	type : listf . tNEWS  (44)

	tNEWS  shift 32
	tFAKE  shift 33
	.  error


state 19
	listh : listh . tHUGE  (36)
	type : listh . tFAKE  (42)

	tHUGE  shift 34
	tFAKE  shift 35
	.  error


state 20
	var : type . tIDENTIFIER  (7)
	var : type . tIDENTIFIER '(' tINITIALLY expr ')'  (8)
	fdecl : type . tFUNCTION tIDENTIFIER  (19)
	fdecl : type . tFUNCTION tIDENTIFIER tUSES vars  (21)

	tIDENTIFIER  shift 36
	tFUNCTION  shift 37
	.  error


state 21
	fdef : tDEFINE tPROCEDURE . tIDENTIFIER tAS block  (28)
	fdef : tDEFINE tPROCEDURE . tIDENTIFIER tON vars tAS block  (30)

	tIDENTIFIER  shift 38
	.  error


state 22
	fdef : tDEFINE qualf . type tFUNCTION tIDENTIFIER tAS block  (23)
	fdef : tDEFINE qualf . tPROCEDURE tIDENTIFIER tAS block  (24)
	fdef : tDEFINE qualf . type tFUNCTION tIDENTIFIER tON vars tAS block  (25)
	fdef : tDEFINE qualf . tPROCEDURE tIDENTIFIER tON vars tAS block  (26)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tPROCEDURE  shift 39
	.  error

	lists  goto 17
	listf  goto 18
	listh  goto 19
	type  goto 40


state 23
	fdef : tDEFINE type . tFUNCTION tIDENTIFIER tAS block  (27)
	fdef : tDEFINE type . tFUNCTION tIDENTIFIER tON vars tAS block  (29)

	tFUNCTION  shift 41
	.  error


state 24
	fdecl : tPROCEDURE tIDENTIFIER .  (20)
	fdecl : tPROCEDURE tIDENTIFIER . tUSES vars  (22)

	tUSES  shift 42
	';'  reduce 20


state 25
	fdecl : qualf tPROCEDURE . tIDENTIFIER  (16)
	fdecl : qualf tPROCEDURE . tIDENTIFIER tUSES vars  (18)

	tIDENTIFIER  shift 43
	.  error


state 26
	var : qualf type . tIDENTIFIER  (9)
	var : qualf type . tIDENTIFIER '(' tINITIALLY expr ')'  (10)
	fdecl : qualf type . tFUNCTION tIDENTIFIER  (15)
	fdecl : qualf type . tFUNCTION tIDENTIFIER tUSES vars  (17)

	tIDENTIFIER  shift 44
	tFUNCTION  shift 45
	.  error


state 27
	decl : var ';' .  (5)

	.  reduce 5


state 28
	funct : fdecl ';' .  (13)

	.  reduce 13


state 29
	listd : listd decl .  (4)

	.  reduce 4


state 30
	lists : lists tSMALL .  (34)

	.  reduce 34


state 31
	type : lists tFAKE .  (40)

	.  reduce 40


state 32
	type : listf tNEWS .  (44)

	.  reduce 44


state 33
	listf : listf tFAKE .  (38)

	.  reduce 38


state 34
	listh : listh tHUGE .  (36)

	.  reduce 36


state 35
	type : listh tFAKE .  (42)

	.  reduce 42


state 36
	var : type tIDENTIFIER .  (7)
	var : type tIDENTIFIER . '(' tINITIALLY expr ')'  (8)

	'('  shift 46
	tAS  reduce 7
	';'  reduce 7
	','  reduce 7


state 37
	fdecl : type tFUNCTION . tIDENTIFIER  (19)
	fdecl : type tFUNCTION . tIDENTIFIER tUSES vars  (21)

	tIDENTIFIER  shift 47
	.  error


state 38
	fdef : tDEFINE tPROCEDURE tIDENTIFIER . tAS block  (28)
	fdef : tDEFINE tPROCEDURE tIDENTIFIER . tON vars tAS block  (30)

	tON  shift 48
	tAS  shift 49
	.  error


state 39
	fdef : tDEFINE qualf tPROCEDURE . tIDENTIFIER tAS block  (24)
	fdef : tDEFINE qualf tPROCEDURE . tIDENTIFIER tON vars tAS block  (26)

	tIDENTIFIER  shift 50
	.  error


state 40
	fdef : tDEFINE qualf type . tFUNCTION tIDENTIFIER tAS block  (23)
	fdef : tDEFINE qualf type . tFUNCTION tIDENTIFIER tON vars tAS block  (25)

	tFUNCTION  shift 51
	.  error


state 41
	fdef : tDEFINE type tFUNCTION . tIDENTIFIER tAS block  (27)
	fdef : tDEFINE type tFUNCTION . tIDENTIFIER tON vars tAS block  (29)

	tIDENTIFIER  shift 52
	.  error


state 42
	fdecl : tPROCEDURE tIDENTIFIER tUSES . vars  (22)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tUSE  shift 5
	tPUBLIC  shift 6
	.  error

	qualf  goto 53
	var  goto 54
	vars  goto 55
	lists  goto 17
	listf  goto 18
	listh  goto 19
	type  goto 56


state 43
	fdecl : qualf tPROCEDURE tIDENTIFIER .  (16)
	fdecl : qualf tPROCEDURE tIDENTIFIER . tUSES vars  (18)

	tUSES  shift 57
	';'  reduce 16


state 44
	var : qualf type tIDENTIFIER .  (9)
	var : qualf type tIDENTIFIER . '(' tINITIALLY expr ')'  (10)

	'('  shift 58
	tAS  reduce 9
	';'  reduce 9
	','  reduce 9


state 45
	fdecl : qualf type tFUNCTION . tIDENTIFIER  (15)
	fdecl : qualf type tFUNCTION . tIDENTIFIER tUSES vars  (17)

	tIDENTIFIER  shift 59
	.  error


state 46
	var : type tIDENTIFIER '(' . tINITIALLY expr ')'  (8)

	tINITIALLY  shift 60
	.  error


state 47
	fdecl : type tFUNCTION tIDENTIFIER .  (19)
	fdecl : type tFUNCTION tIDENTIFIER . tUSES vars  (21)

	tUSES  shift 61
	';'  reduce 19


state 48
	fdef : tDEFINE tPROCEDURE tIDENTIFIER tON . vars tAS block  (30)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tUSE  shift 5
	tPUBLIC  shift 6
	.  error

	qualf  goto 53
	var  goto 54
	vars  goto 62
	lists  goto 17
	listf  goto 18
	listh  goto 19
	type  goto 56


state 49
	fdef : tDEFINE tPROCEDURE tIDENTIFIER tAS . block  (28)

	'{'  shift 63
	.  error

	block  goto 64


state 50
	fdef : tDEFINE qualf tPROCEDURE tIDENTIFIER . tAS block  (24)
	fdef : tDEFINE qualf tPROCEDURE tIDENTIFIER . tON vars tAS block  (26)

	tON  shift 65
	tAS  shift 66
	.  error


state 51
	fdef : tDEFINE qualf type tFUNCTION . tIDENTIFIER tAS block  (23)
	fdef : tDEFINE qualf type tFUNCTION . tIDENTIFIER tON vars tAS block  (25)

	tIDENTIFIER  shift 67
	.  error


state 52
	fdef : tDEFINE type tFUNCTION tIDENTIFIER . tAS block  (27)
	fdef : tDEFINE type tFUNCTION tIDENTIFIER . tON vars tAS block  (29)

	tON  shift 68
	tAS  shift 69
	.  error


state 53
	var : qualf . type tIDENTIFIER  (9)
	var : qualf . type tIDENTIFIER '(' tINITIALLY expr ')'  (10)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	.  error

	lists  goto 17
	listf  goto 18
	listh  goto 19
	type  goto 70


state 54
	vars : var .  (11)

	.  reduce 11


state 55
	vars : vars . ',' var  (12)
	fdecl : tPROCEDURE tIDENTIFIER tUSES vars .  (22)

	','  shift 71
	';'  reduce 22


state 56
	var : type . tIDENTIFIER  (7)
	var : type . tIDENTIFIER '(' tINITIALLY expr ')'  (8)

	tIDENTIFIER  shift 36
	.  error


state 57
	fdecl : qualf tPROCEDURE tIDENTIFIER tUSES . vars  (18)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tUSE  shift 5
	tPUBLIC  shift 6
	.  error

	qualf  goto 53
	var  goto 54
	vars  goto 72
	lists  goto 17
	listf  goto 18
	listh  goto 19
	type  goto 56


state 58
	var : qualf type tIDENTIFIER '(' . tINITIALLY expr ')'  (10)

	tINITIALLY  shift 73
	.  error


state 59
	fdecl : qualf type tFUNCTION tIDENTIFIER .  (15)
	fdecl : qualf type tFUNCTION tIDENTIFIER . tUSES vars  (17)

	tUSES  shift 74
	';'  reduce 15


state 60
	var : type tIDENTIFIER '(' tINITIALLY . expr ')'  (8)

	tINTEGER  shift 75
	tIDENTIFIER  shift 76
	tSTRING  shift 77
	tFLOAT  shift 78
	tNULL  shift 79
	tPLUS  shift 80
	tMINUS  shift 81
	tNOT  shift 82
	tCELL  shift 83
	tINPUT  shift 84
	tUSE  shift 85
	tDO  shift 86
	'('  shift 87
	.  error

	str  goto 88
	expr  goto 89
	finv  goto 90
	lval  goto 91


state 61
	fdecl : type tFUNCTION tIDENTIFIER tUSES . vars  (21)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tUSE  shift 5
	tPUBLIC  shift 6
	.  error

	qualf  goto 53
	var  goto 54
	vars  goto 92
	lists  goto 17
	listf  goto 18
	listh  goto 19
	type  goto 56


state 62
	vars : vars . ',' var  (12)
	fdef : tDEFINE tPROCEDURE tIDENTIFIER tON vars . tAS block  (30)

	tAS  shift 93
	','  shift 71
	.  error


state 63
	block : '{' . decls '}'  (49)
	block : '{' . listi '}'  (50)
	block : '{' . decls listi '}'  (51)
	block : '{' . '}'  (52)

	tINTEGER  shift 75
	tIDENTIFIER  shift 76
	tSTRING  shift 77
	tFLOAT  shift 78
	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tNULL  shift 79
	tPLUS  shift 80
	tMINUS  shift 81
	tNOT  shift 82
	tASSIGN  shift 94
	tCELL  shift 83
	tINPUT  shift 84
	tUSE  shift 95
	tPUBLIC  shift 6
	tDEFINE  shift 7
	tPROCEDURE  shift 8
	tDO  shift 86
	tRETURN  shift 96
	tIF  shift 97
	tSTOP  shift 98
	tAGAIN  shift 99
	tPOST  shift 100
	tTWEET  shift 101
	tSWEEPING  shift 102
	'('  shift 87
	'{'  shift 63
	'}'  shift 103
	.  error

	qualf  goto 10
	str  goto 88
	stmt  goto 104
	decl  goto 105
	asgn  goto 106
	iter  goto 107
	var  goto 12
	funct  goto 13
	fdecl  goto 14
	fdef  goto 15
	listi  goto 108
	decls  goto 109
	block  goto 110
	expr  goto 111
	finv  goto 90
	lval  goto 91
	lists  goto 17
	listf  goto 18
	listh  goto 19
	type  goto 20


state 64
	fdef : tDEFINE tPROCEDURE tIDENTIFIER tAS block .  (28)

	.  reduce 28


state 65
	fdef : tDEFINE qualf tPROCEDURE tIDENTIFIER tON . vars tAS block  (26)

	tSMALL  shift 1
	tHUGE  shift 2
	tNEWS  shift 3
	tFAKE  shift 4
	tUSE  shift 5
	tPUBLIC  shift 6
	.  error

	qualf  goto 53
	var  goto 54
	vars  goto 112
	lists  goto 17
	listf  goto 18
	listh  goto 19
	type  goto 56


state 66
	fdef : tDEFINE qualf tPROCEDURE tIDENTIFIER tAS . block  (24)

	'{'  shift 63
	.  error

	block  goto 113


state 67
	fdef : tDEFINE qualf type tFUNCTION tIDENTIFIER . tAS block  (23)
	fdef : tDEFINE qualf type tFUNCTION tIDENTIFIER . tON vars tAS block  (25)
